# PGR-landscape-generator

./: CMakeLists.txt  README.md  prezentation.pptx
python_preprocess/: download.py  find.py  process_laz.py  readme.md
resources/: douglas_fir.mtl  picea.mtl
resources/skybox/cubemaps/: split_cubemaps.sh
src/: billboards.cpp  billboards.h  camera_and_control.cpp  camera_and_control.h  fps_counter.cpp  fps_counter.h  gl_basics.cpp  gl_basics.h  global_defines.h  main.cpp  main.h  obj_load.cpp  obj_load.h  shadows.cpp  shadows.h  skybox.cpp  skybox.h  terrain.cpp  terrain.h  trees.cpp  trees.h
src/shaders/: billboard.fs  billboard.vs  fragment.fs  lod.comp  shadows.fs  shadows.vs  skyboxFragment.fs  skyboxVertex.vs  vertex.vs
